# self-bin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
self_bin/: cli.py
tests/: test_self_bin.py
