[project]
name = "self-bin"
version = "0.1"
description = "Self Hosted Request Bin and HTTP Bin"
readme = "README.md"
authors = [{name = "Krishap"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/Krishap-s/self-bin"
Changelog = "https://github.com/Krishap-s/self-bin/releases"
Issues = "https://github.com/Krishap-s/self-bin/issues"
CI = "https://github.com/Krishap-s/self-bin/actions"

[project.entry-points.console_scripts]
self-bin = "self_bin.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
