[tool.poetry]
name = "self-bin"
version = "0.1.0"
description = "Self Hosted Request Bin and HTTP Bin"
authors = ["Krishap-s <krishap.s.sreenivasan@gmail.com>"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
readme = "README.md"
repository = "https://github.com/Krishap-s/self-bin"

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.1.7"
twisted = "^23.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/Krishap-s/self-bin"
Changelog = "https://github.com/Krishap-s/self-bin/releases"
Issues = "https://github.com/Krishap-s/self-bin/issues"
CI = "https://github.com/Krishap-s/self-bin/actions"

[tool.poetry.scripts]
self-bin = "self_bin.cli:cli"